css/theme.css: whitespace style fix

--- a/css/theme.css
+++ b/css/theme.css
@@ -1,1 +1,3 @@
-.container { width: 960px; }
+.container {
+	width: 960px;
+}
